--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "slugify": "^1.6.5",
-    "stripe": "^11.12.0"
+    "stripe": "^11.12.0",
+    "uniqueid": "^1.0.0"
   }
 }
